Создано с помощью Colaboratory

--- a/Salaries_in_SF.ipynb
+++ b/Salaries_in_SF.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNm5Bsju79ylt/KGoXJ4nmp",
+      "authorship_tag": "ABX9TyNmiyhzaWituFwLd3HEDui4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -80,12 +80,13 @@
     {
       "cell_type": "code",
       "source": [
-        "url='https://raw.githubusercontent.com/Kokkalo4/Kaggle-SF-Salaries/master/Salaries.csv'"
+        "#url='https://raw.githubusercontent.com/Kokkalo4/Kaggle-SF-Salaries/master/Salaries.csv'\n",
+        "url='https://raw.githubusercontent.com/EvgenyBelov78/DA1/main/Salaries.csv'"
       ],
       "metadata": {
         "id": "YRLknq_LzSBj"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -100,9 +101,9 @@
           "height": 409
         },
         "id": "XfhhCFzMyf7g",
-        "outputId": "c719cd5e-7507-408a-f83d-e4a7ca02ed0a"
+        "outputId": "b931368c-3047-41cf-87b8-c86e5325d1cb"
       },
-      "execution_count": 3,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -139,7 +140,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-cc09563d-edf7-4d64-baa4-cf605d7367b6\">\n",
+              "  <div id=\"df-6961154f-2b1e-47f5-b2f2-1f4ba6fcba24\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -258,7 +259,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-cc09563d-edf7-4d64-baa4-cf605d7367b6')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-6961154f-2b1e-47f5-b2f2-1f4ba6fcba24')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -309,12 +310,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-cc09563d-edf7-4d64-baa4-cf605d7367b6 button.colab-df-convert');\n",
+              "          document.querySelector('#df-6961154f-2b1e-47f5-b2f2-1f4ba6fcba24 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-cc09563d-edf7-4d64-baa4-cf605d7367b6');\n",
+              "          const element = document.querySelector('#df-6961154f-2b1e-47f5-b2f2-1f4ba6fcba24');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -337,7 +338,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 5
         }
       ]
     },
@@ -353,7 +354,7 @@
         "id": "RuQGgCc8znDO",
         "outputId": "cc6d4d6b-e487-417c-a08f-df6a73a32baa"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -396,7 +397,7 @@
         "id": "CHO01BVyz2R_",
         "outputId": "3de78f60-42a1-4e63-f02b-0f6adfd7b705"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -605,7 +606,7 @@
         "id": "n-zW5cRu0BMu",
         "outputId": "9a48a5b8-69dd-4c1c-e97c-b8b1f8fca670"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -848,7 +849,7 @@
         "id": "en3h1rza0Gn5",
         "outputId": "b4c66499-33d2-43bd-eb0e-bac4cd18706d"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -878,7 +879,7 @@
         "id": "CkORChty0Sf9",
         "outputId": "70b87687-712a-43b8-a6ff-2dcfa3d9826d"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -905,7 +906,7 @@
         "id": "SX0y7EYz0a4V",
         "outputId": "c700f9b2-d8b6-4523-f8a6-7fa7d9aa38d4"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -933,7 +934,7 @@
         "id": "8BaO_0FQ0luq",
         "outputId": "0be81cd1-c45c-450e-e5b0-eb3d95eb8c05"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -960,7 +961,7 @@
         "id": "kYUhRe8J1Bxk",
         "outputId": "f5facdc5-ddff-4af8-a0f1-ea358c20d47c"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1334,7 +1335,7 @@
         "id": "Wwwjt0hY3Zzq",
         "outputId": "b786d3f0-6961-4b22-a3fa-b08a8452e4ff"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1481,7 +1482,7 @@
         "id": "x7yQ1oZb3gRL",
         "outputId": "33d8d5a7-4380-44b7-f2fd-a9230f8913a4"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1628,7 +1629,7 @@
         "id": "xiMV10i-3mla",
         "outputId": "44775c9c-ab6c-4622-b6cf-c0725a857803"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1989,7 +1990,7 @@
         "id": "F-qrzd4T5ENI",
         "outputId": "8171c2a7-979e-415c-d22e-c5ffcd739704"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2356,7 +2357,7 @@
       "metadata": {
         "id": "gbCnjcs78lsY"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2367,7 +2368,7 @@
       "metadata": {
         "id": "KGYZboPi9kbx"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2383,7 +2384,7 @@
         "id": "KU2sCZBfA-8J",
         "outputId": "79d2fa52-87b8-4204-ed5d-05f39b04405d"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2526,7 +2527,7 @@
       "metadata": {
         "id": "llhiFrh0BAOQ"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2537,7 +2538,7 @@
       "metadata": {
         "id": "OLYHCqgf9vqE"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2553,7 +2554,7 @@
         "id": "BVoqGueQ8wiu",
         "outputId": "dce43f3b-419a-4034-fd48-acffd2e8a9cd"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2939,7 +2940,7 @@
         "id": "niCtKq-Z-j0A",
         "outputId": "35ca15d0-20c3-41d3-9fe9-b3213d247632"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3311,7 +3312,7 @@
         "id": "bSk0nbFI_iAb",
         "outputId": "38f837c5-9e30-4a16-8778-efc3ca48e05f"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3349,7 +3350,7 @@
         "id": "UPI3vdnnAXV3",
         "outputId": "568b67ef-b0b3-438e-b313-0315b086e9b3"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3381,7 +3382,7 @@
         "id": "gOSBFljrBv8o",
         "outputId": "2dbf6cca-1a15-4a25-c873-311b720d7faf"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3610,7 +3611,7 @@
         "id": "ABEJcsIjDu8P",
         "outputId": "3d5e8ead-38d2-4be1-99cc-bc6cf747b32e"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3646,7 +3647,7 @@
       "metadata": {
         "id": "9t9_nRmpDvcK"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3657,7 +3658,7 @@
       "metadata": {
         "id": "8YTreTBgGFA6"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3673,7 +3674,7 @@
         "id": "5mvyb-4gH3JW",
         "outputId": "032c81a6-2784-42ad-c35e-c7afb4c0266e"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3820,7 +3821,7 @@
         },
         "outputId": "612a6d68-9476-4445-f3f2-046961a1d032"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3846,7 +3847,7 @@
       "metadata": {
         "id": "72fOBA6A5Sz1"
       },
-      "execution_count": 73,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3857,7 +3858,7 @@
       "metadata": {
         "id": "fRpDW0Fv8xyN"
       },
-      "execution_count": 75,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3868,7 +3869,7 @@
       "metadata": {
         "id": "KRhn4Mqg83F9"
       },
-      "execution_count": 77,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3879,7 +3880,7 @@
       "metadata": {
         "id": "Q8xoHnyf9Bdh"
       },
-      "execution_count": 79,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3894,7 +3895,7 @@
         "id": "A0XHQzoK5TF7",
         "outputId": "745f029e-6511-4895-f1c2-5ac7bfb17654"
       },
-      "execution_count": 80,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3937,7 +3938,7 @@
         "id": "QaTdqmoy5TTy",
         "outputId": "92e4f5c4-3696-4678-e94b-280ac23a5c34"
       },
-      "execution_count": 89,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3976,7 +3977,7 @@
         "id": "p9qpfYbk_3zi",
         "outputId": "308e4272-5807-487e-9a8f-8d5ef70a5c84"
       },
-      "execution_count": 91,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4015,7 +4016,7 @@
         "id": "Xvz4Qk7F_eVz",
         "outputId": "00e5581b-df5d-4150-9a1d-c13789f79dd5"
       },
-      "execution_count": 90,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4054,7 +4055,7 @@
         "id": "UVUj0vzxAAK_",
         "outputId": "4650cd53-dff2-4be0-de88-2c0b5ee426e6"
       },
-      "execution_count": 94,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4094,7 +4095,7 @@
         "id": "NCpHnb1KGtZK",
         "outputId": "be7f4954-5cac-45ef-bcc9-ebabd0e559ea"
       },
-      "execution_count": 101,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4346,7 +4347,7 @@
         "id": "6fZCoTjsHKVM",
         "outputId": "83b37301-16f1-477c-9942-aed4809062aa"
       },
-      "execution_count": 118,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4370,7 +4371,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 119,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4394,7 +4395,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 120,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4419,7 +4420,7 @@
         "id": "cRxuY-AMHV9c",
         "outputId": "dc3eae69-f793-4af7-fb12-515fc5434af4"
       },
-      "execution_count": 103,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4590,7 +4591,7 @@
       "metadata": {
         "id": "l1rdUxl3HqX8"
       },
-      "execution_count": 109,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -4606,7 +4607,7 @@
         "id": "XnMJnO-jIVBU",
         "outputId": "8357ce43-656a-471b-c44a-bc3605940662"
       },
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4782,7 +4783,7 @@
         "id": "eLtNJh0BImWV",
         "outputId": "d05c58dd-09c6-4b7b-e1c3-63535fb55b9f"
       },
-      "execution_count": 115,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4821,7 +4822,7 @@
         "id": "kclidWLdHJQv",
         "outputId": "9db7face-8d8b-471c-e231-b64b49544a7e"
       },
-      "execution_count": 122,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4860,7 +4861,7 @@
         "id": "FQ1TDJ1AAAeZ",
         "outputId": "79ba860c-76ad-4e65-80d7-39fdff332d3c"
       },
-      "execution_count": 123,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4899,7 +4900,7 @@
           "height": 835
         }
       },
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5292,7 +5293,7 @@
       "metadata": {
         "id": "k5ZGLWGY-YN9"
       },
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5303,7 +5304,7 @@
       "metadata": {
         "id": "_HLARCn_TIXv"
       },
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5319,7 +5320,7 @@
           "height": 49
         }
       },
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5467,7 +5468,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5494,7 +5495,7 @@
       "metadata": {
         "id": "h1YATunKQ7_E"
       },
-      "execution_count": 164,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5509,7 +5510,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 165,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5549,7 +5550,7 @@
           "height": 382
         }
       },
-      "execution_count": 166,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5647,7 +5648,7 @@
       "metadata": {
         "id": "wnhNO_CirhR_"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5662,7 +5663,7 @@
       "metadata": {
         "id": "oczQr1ncrjpn"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5681,7 +5682,7 @@
       "metadata": {
         "id": "UnrccyOu3f1T"
       },
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -5697,7 +5698,7 @@
         "id": "C9LW8RPM3t22",
         "outputId": "34f53423-b8da-4a98-85eb-7f39436be4c2"
       },
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
