--- a/Salaries_in_SF.ipynb
+++ b/Salaries_in_SF.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPo04ITu4rRQ6nGbL/oqnUq",
+      "authorship_tag": "ABX9TyMGiDHAS3A6+N2HoZMK1dzm",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -5742,12 +5742,12 @@
         "dffull"
       ],
       "metadata": {
-        "id": "_CVo8KV9OuNr",
-        "outputId": "01c1d56a-6cb5-4766-8a1b-ae0cf7b3f2ce",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 49
-        }
+        },
+        "id": "_CVo8KV9OuNr",
+        "outputId": "01c1d56a-6cb5-4766-8a1b-ae0cf7b3f2ce"
       },
       "execution_count": 170,
       "outputs": [
@@ -5881,11 +5881,11 @@
         "  year+=1"
       ],
       "metadata": {
-        "id": "7mZBobZgBYj4",
-        "outputId": "41c05e80-5189-4d80-e719-853f02b0a494",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7mZBobZgBYj4",
+        "outputId": "41c05e80-5189-4d80-e719-853f02b0a494"
       },
       "execution_count": 171,
       "outputs": [
@@ -5932,12 +5932,12 @@
         "df.head()"
       ],
       "metadata": {
-        "id": "tpQhJmyGRPDJ",
-        "outputId": "689d8eb6-8622-4250-e3eb-cc8e7c8cc54e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 337
-        }
+        },
+        "id": "tpQhJmyGRPDJ",
+        "outputId": "689d8eb6-8622-4250-e3eb-cc8e7c8cc54e"
       },
       "execution_count": 153,
       "outputs": [
@@ -6170,11 +6170,11 @@
         "df.info()"
       ],
       "metadata": {
-        "id": "PbJpXmLIJdl8",
-        "outputId": "6f15e248-8a5a-45fe-8273-0085969b30d4",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "PbJpXmLIJdl8",
+        "outputId": "6f15e248-8a5a-45fe-8273-0085969b30d4"
       },
       "execution_count": 154,
       "outputs": [
@@ -6211,11 +6211,11 @@
         "dffull.info()"
       ],
       "metadata": {
-        "id": "QtQ-Kmy-OQ1-",
-        "outputId": "dee4f12c-92e8-4f74-8963-441a8b74f005",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "QtQ-Kmy-OQ1-",
+        "outputId": "dee4f12c-92e8-4f74-8963-441a8b74f005"
       },
       "execution_count": 173,
       "outputs": [
@@ -6274,11 +6274,11 @@
         "df.info()"
       ],
       "metadata": {
-        "id": "mvyzA2ZZWDJo",
-        "outputId": "623d88f2-eca7-4413-ff75-ff45e041706f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "mvyzA2ZZWDJo",
+        "outputId": "623d88f2-eca7-4413-ff75-ff45e041706f"
       },
       "execution_count": 176,
       "outputs": [
@@ -6326,11 +6326,11 @@
         "dffull.info()"
       ],
       "metadata": {
-        "id": "w-iyCTa1WKqA",
-        "outputId": "41f775f1-a97d-4330-941b-972dbae8e85d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "w-iyCTa1WKqA",
+        "outputId": "41f775f1-a97d-4330-941b-972dbae8e85d"
       },
       "execution_count": 179,
       "outputs": [
@@ -6364,17 +6364,66 @@
     {
       "cell_type": "code",
       "source": [
-        "dffull.groupby('Year').sum()"
+        "df_lin=dffull.groupby('Year').sum()"
       ],
       "metadata": {
-        "id": "maIDsEccIVKN",
-        "outputId": "c138c4a5-ad03-4a56-fd62-fa340a518a37",
+        "id": "maIDsEccIVKN"
+      },
+      "execution_count": 180,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_lin.reindex"
+      ],
+      "metadata": {
+        "id": "TJ0LIvABYI7R",
+        "outputId": "5b262344-bb15-4624-d1ff-4b7004ad5e07",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 185,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<bound method DataFrame.reindex of           TotalPay  TotalPayBenefits  Notes\n",
+              "Year                                       \n",
+              "2011  2.594195e+09      2.594195e+09    0.0\n",
+              "2012  2.724848e+09      3.696940e+09    0.0\n",
+              "2013  2.918656e+09      3.814772e+09    0.0\n",
+              "2014  2.876911e+09      3.821866e+09    0.0\n",
+              "2015  3.052818e+09      4.006678e+09    0.0\n",
+              "2016  3.298624e+09      4.284702e+09    0.0\n",
+              "2017  3.501297e+09      4.558521e+09    0.0\n",
+              "2018  3.688579e+09      4.800987e+09    0.0\n",
+              "2019  3.909399e+09      5.118203e+09    0.0\n",
+              "2020  3.963517e+09      5.264676e+09    0.0\n",
+              "2021  4.104136e+09      5.448567e+09    0.0>"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 185
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df_lin"
+      ],
+      "metadata": {
+        "id": "nU8707ErZMyt",
+        "outputId": "38565195-0726-4868-b09e-1c157e9194ae",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 426
         }
       },
-      "execution_count": 178,
+      "execution_count": 186,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6396,7 +6445,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-941e3305-1730-400f-a02b-b8c6a7849e41\">\n",
+              "  <div id=\"df-bb0faad2-690d-429b-8cdb-2010956de988\">\n",
               "    <div class=\"colab-df-container\">\n",
               "      <div>\n",
               "<style scoped>\n",
@@ -6497,7 +6546,7 @@
               "  </tbody>\n",
               "</table>\n",
               "</div>\n",
-              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-941e3305-1730-400f-a02b-b8c6a7849e41')\"\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-bb0faad2-690d-429b-8cdb-2010956de988')\"\n",
               "              title=\"Convert this dataframe to an interactive table.\"\n",
               "              style=\"display:none;\">\n",
               "        \n",
@@ -6548,12 +6597,12 @@
               "\n",
               "      <script>\n",
               "        const buttonEl =\n",
-              "          document.querySelector('#df-941e3305-1730-400f-a02b-b8c6a7849e41 button.colab-df-convert');\n",
+              "          document.querySelector('#df-bb0faad2-690d-429b-8cdb-2010956de988 button.colab-df-convert');\n",
               "        buttonEl.style.display =\n",
               "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "        async function convertToInteractive(key) {\n",
-              "          const element = document.querySelector('#df-941e3305-1730-400f-a02b-b8c6a7849e41');\n",
+              "          const element = document.querySelector('#df-bb0faad2-690d-429b-8cdb-2010956de988');\n",
               "          const dataTable =\n",
               "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                     [key], {});\n",
@@ -6576,7 +6625,48 @@
             ]
           },
           "metadata": {},
-          "execution_count": 178
+          "execution_count": 186
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "for year in df_lin['Year']:\n",
+        " if df_lin['Year'] % 4 != 0:\n",
+        "    df_lin['Notes']='365'\n",
+        " else: df_lin['Notes']='366'"
+      ],
+      "metadata": {
+        "id": "W_PphAfWYQPR",
+        "outputId": "59a40b65-f095-463a-b897-7cb724f2ae5e",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 502
+        }
+      },
+      "execution_count": 184,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "KeyError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3360\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3361\u001b[0;31m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3362\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/_libs/index.pyx\u001b[0m in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mpandas/_libs/hashtable_class_helper.pxi\u001b[0m in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'Year'",
+            "\nThe above exception was the direct cause of the following exception:\n",
+            "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-184-b927d312ad49>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfor\u001b[0m \u001b[0myear\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdf_lin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Year'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m  \u001b[0;32mif\u001b[0m \u001b[0mdf_lin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Year'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m%\u001b[0m \u001b[0;36m4\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mdf_lin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Notes'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'365'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m  \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mdf_lin\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Notes'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'366'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/frame.py\u001b[0m in \u001b[0;36m__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3456\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mnlevels\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3457\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_getitem_multilevel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3458\u001b[0;31m             \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolumns\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3459\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mis_integer\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3460\u001b[0m                 \u001b[0mindexer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mindexer\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/pandas/core/indexes/base.py\u001b[0m in \u001b[0;36mget_loc\u001b[0;34m(self, key, method, tolerance)\u001b[0m\n\u001b[1;32m   3361\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_engine\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget_loc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcasted_key\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3362\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 3363\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   3364\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   3365\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mis_scalar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0misna\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkey\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhasnans\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyError\u001b[0m: 'Year'"
+          ]
         }
       ]
     }
