Создано с помощью Colaboratory

--- a/NDRF.ipynb
+++ b/NDRF.ipynb
@@ -6979,12 +6979,12 @@
         "dffull.rpdPdfLink[46]"
       ],
       "metadata": {
-        "id": "5BNJdrs-DokM",
-        "outputId": "10aaf3ed-f2ca-4c53-b912-67ad5dc80965",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "id": "5BNJdrs-DokM",
+        "outputId": "10aaf3ed-f2ca-4c53-b912-67ad5dc80965"
       },
       "execution_count": 32,
       "outputs": [
@@ -7006,14 +7006,48 @@
     {
       "cell_type": "code",
       "source": [
-        "dffull[(dffull.rpdPdfLink==rpdPdfLink)&(dffull.index<109)].id.count()"
+        "t='51'"
       ],
       "metadata": {
-        "id": "OO-CHduNEnmN",
-        "outputId": "19afcc62-1f28-47f0-adc9-ea3db6d214e3",
+        "id": "OrknEF-ta-hy"
+      },
+      "execution_count": 69,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(float(t))"
+      ],
+      "metadata": {
+        "id": "MAhg7iobbAhP",
+        "outputId": "768ffde6-5973-4665-c0ee-5f7f5d466f01",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
+      },
+      "execution_count": 70,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "51.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dffull[(dffull.rpdPdfLink==rpdPdfLink)&(dffull.index<109)].id.count()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "OO-CHduNEnmN",
+        "outputId": "19afcc62-1f28-47f0-adc9-ea3db6d214e3"
       },
       "execution_count": 46,
       "outputs": [
@@ -7040,7 +7074,7 @@
         "  if dffull[(dffull.rpdPdfLink==rpdPdfLink)&(dffull.index<x)].id.count()==0:\n",
         "   new=True\n",
         "   tables = tabula.read_pdf(rpdPdfLink, pages='all', pandas_options={'header': None})\n",
-        "  print(str(x)+' : '+str(dffull.iloc[x]['id'])) \n",
+        "  print(str(x)+' :: '+str(dffull.iloc[x]['id'])) \n",
         "  i=0\n",
         "  j=0\n",
         "  k=0\n",
@@ -7094,7 +7128,7 @@
         "        if str(tables[k][i+1][j])!='nan':\n",
         "         print('222')\n",
         " #       print('222'+str(tables[k][i+1][j])+'='+str(type(tables[k][i+1][j])))\n",
-        "         str_d=str(tables[k][i+1][j]) #.replace('\\r', '');\n",
+        "         str_d=str(tables[k][i+1][j].replace('\\r', ''))\n",
         "         str_d=re.sub('\\r', '', str_d)\n",
         "         str_d=re.sub('Количество договоров, заключенных с использованием счетов эскроу:', '', str_d)\n",
         "         str_d=re.sub('Количество договоров, заключенных при условии уплаты обязательных отчислений(взносов) в компенсационный фонд:', '', str_d)\n",
@@ -7109,14 +7143,17 @@
         "         except ValueError:\n",
         "          q=False \n",
         "        try:\n",
-        "          str(tables[k][i+2][j])!='nan'\n",
-        "          print('333')\n",
-        "          print('333'+str(tables[k][i+2][j])+'='+str(type(tables[k][i+2][j])))\n",
-        "          str_d=str(tables[k][i+2][j]) #.replace('\\r', '');\n",
+        "          str_d=str(tables[k][i+2][j].replace('\\r', ''))\n",
+        "         #str(tables[k][i+2][j])!='nan'\n",
+        "          print('33333')\n",
+        "          print('333:'+str_d+'='+str(type(tables[k][i+2][j])))\n",
+        "          #str_d=str(tables[k][i+2][j]) #.replace('\\r', '');\n",
         "          str_d=re.sub('\\r', '', str_d)\n",
         "          str_d=re.sub('Количество договоров, заключенных с использованием счетов эскроу:', '', str_d)\n",
         "          str_d=re.sub('Количество договоров, заключенных при условии уплаты обязательных отчислений(взносов) в компенсационный фонд:', '', str_d)\n",
         "          str_d=re.sub('Количество договоров, заключенных с использованием иных способов обеспечениягражданской ответственности застройщика:', '', str_d)\n",
+        "          str_d=str_d.replace('Количество договоров, заключенных при условии уплаты обязательных отчислений(взносов) в компенсационный фонд:', '')\n",
+        "          str_d=str_d.replace('Количество договоров, заключенных с использованием иных способов обеспечениягражданской ответственности застройщика:', '')\n",
         "          str_d=re.sub('19.7.1.1.1.1', '', str_d)\n",
         "          str_d=re.sub('19.7.1.1.1.2', '', str_d)\n",
         "          str_d=re.sub('19.7.1.1.1.3', '', str_d)\n",
@@ -7124,8 +7161,9 @@
         "          str_d=re.sub(' ', '', str_d)\n",
         "          str_d=re.sub('Количестводоговоров,заключенныхприусловииуплатыобязательныхотчислений(взносов)вкомпенсационныйфонд:', '', str_d)\n",
         "          try:\n",
-        "           print(str(num_d)+'^='+str_d) \n",
+        "           print(float(str_d.replace(\",\",\".\"))) \n",
         "           num_d=num_d+float(str_d.replace(\",\",\".\"))\n",
+        "           print(str(num_d)+'^=^'+str_d) \n",
         "          except ValueError:\n",
         "           q=False\n",
         "        except:\n",
@@ -7327,32 +7365,34 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qKyli93A_lpI",
-        "outputId": "7fddd208-c60b-42dd-cf56-72c4e6728662"
+        "outputId": "717a41f9-4a18-4f40-f65b-32a31d8dad23"
       },
-      "execution_count": 59,
+      "execution_count": 79,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0 : 18136\n",
+            "0 :: 18136\n",
             "62|3|2|19.7.1.1.1\n",
-            "333\n",
-            "333Жилые помещения:=<class 'str'>\n",
-            "0^=\n",
+            "33333\n",
+            "333:Жилые помещения:=<class 'str'>\n",
             "62|3|3|19.7.1.1.1.1\n",
-            "333\n",
-            "14=<class 'str'>\n",
-            "0^=14\n",
+            "33333\n",
+            "333:Количество договоров, заключенных с использованием счетов эскроу:14=<class 'str'>\n",
+            "14.0\n",
+            "14.0^=^14\n",
             "62|3|4|19.7.1.1.1.2\n",
-            "333\n",
-            "51=<class 'str'>\n",
-            "14.0^=Количестводоговоров,заключенныхприусловииуплатыобязательныхотчислений(взносов)вкомпенсационныйфонд:51\n",
+            "33333\n",
+            "333:Количество договоров, заключенных при условии уплаты обязательных отчислений(взносов) в компенсационный фонд:51=<class 'str'>\n",
+            "51.0\n",
+            "65.0^=^51\n",
             "62|3|5|19.7.1.1.1.3\n",
-            "333\n",
-            "0=<class 'str'>\n",
-            "14.0^=0\n",
-            "14.0|nan|nan\n"
+            "33333\n",
+            "333:Количество договоров, заключенных с использованием иных способов обеспечениягражданской ответственности застройщика:0=<class 'str'>\n",
+            "0.0\n",
+            "65.0^=^0\n",
+            "65.0|nan|nan\n"
           ]
         }
       ]
@@ -7360,30 +7400,26 @@
     {
       "cell_type": "code",
       "source": [
-        "tables[62][3][4]"
+        "float(tables[62][5][4].replace('\\r','').replace('Количество договоров, заключенных при условии уплаты обязательных отчислений(взносов) в компенсационный фонд:',''))"
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
+          "base_uri": "https://localhost:8080/"
         },
         "id": "V2hyFfYwJwgT",
-        "outputId": "864dc49f-6390-46fb-ef1e-a4495ffc998b"
+        "outputId": "9e3f7bbe-beae-4b9f-9a0b-a971725bfb23"
       },
-      "execution_count": 58,
+      "execution_count": 78,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "'19.7.1.1.1.2'"
-            ],
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            }
+              "51.0"
+            ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 78
         }
       ]
     },
