Создано с помощью Colaboratory

--- a/NDRF_new.ipynb
+++ b/NDRF_new.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "kxi2F3z5ofeQ",
         "colab": {
@@ -70,7 +70,7 @@
         },
         "outputId": "725c46aa-b80f-4c24-8659-d22311f4164d"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         "id": "G4D0kaHVxHei",
         "outputId": "89b9ee6e-9f65-486f-c50f-84271935a715"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -165,7 +165,7 @@
       "metadata": {
         "id": "sHS3kaebJ8bo"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -188,7 +188,7 @@
       "metadata": {
         "id": "9-mzGT-SKcWB"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -204,7 +204,7 @@
           "height": 244
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -412,7 +412,7 @@
       "metadata": {
         "id": "MkPno5bpRcaR"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -423,7 +423,7 @@
       "metadata": {
         "id": "jj20zf3Pf5Zz"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -439,7 +439,7 @@
           "height": 694
         }
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1080,7 +1080,7 @@
       "metadata": {
         "id": "b85bqdTZftga"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1091,7 +1091,7 @@
       "metadata": {
         "id": "wKhCf_4TlhUB"
       },
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1107,7 +1107,7 @@
           "height": 437
         }
       },
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1568,7 +1568,7 @@
       "metadata": {
         "id": "J0Hbr2LDgHfD"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1876,6 +1876,19 @@
         "            ffindr=1\n",
         "         except (KeyError, ValueError):\n",
         "           pass\n",
+        "        if ffindr==0:\n",
+        "         try:\n",
+        "          str_r=str(str(tables[k][i][j+1]).replace('\\r', '').replace('19.7.3.1.1.1','').replace('19.7.3.1.1.2','').replace('19.7.3.1.1.3','').replace('руб.','').replace('руб',''))\n",
+        "          str_r=str_r.replace('Суммарная цена договоров, заключенных с использованием счетов эскроу:', '')\n",
+        "          str_r=str_r.replace('Суммарная цена договоров, заключенных при условии уплаты обязательных отчислений(взносов) в компенсационный фонд:', '')\n",
+        "          str_r=str_r.replace('Суммарная цена договоров, заключенных с использованием иных способов обеспечениягражданской ответственности застройщика:', '')\n",
+        "          str_r=str_r.replace('(','').replace(')','').replace(' ','').replace(',','.').replace('Жилыепомещения:','')\n",
+        "          if len(str_r)>0:\n",
+        "           if math.isnan(float(str_r))==False: \n",
+        "            num_r=num_r+float(str_r)\n",
+        "            ffindr=1\n",
+        "         except:\n",
+        "           pass\n",
         "     #print(str(k)+'|'+str(i)+'|'+str(j)) \n",
         "     j=j+1\n",
         "    i=i+1\n",
@@ -1900,7 +1913,7 @@
         "id": "qKyli93A_lpI",
         "outputId": "fecc2fa2-2b35-4978-d7cb-f928f680d3d2"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2644,7 +2657,7 @@
         },
         "outputId": "cf3edf6a-d596-4f0a-eed1-982496b46a9a"
       },
-      "execution_count": 42,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
